[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffsptk"
authors = [{ name = "SPTK Working Group" }]
maintainers = [
  { name = "Takenori Yoshimura", email = "takenori@sp.nitech.ac.jp" },
]
description = "Speech signal processing modules for machine learning"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["dsp", "pytorch", "signal processing", "sptk"]
license = { text = "Apache 2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy < 2.0.0",
  "scipy < 1.14.0",
  "librosa >= 0.10.1",
  "soundfile >= 0.10.2",
  "torch >= 1.11.0",
  "torchaudio >= 0.11.0",
  "torchcrepe >= 0.0.21",
  "torchlpc >= 0.2.0",
  "torchcomp >= 0.1.1",
  "vector-quantize-pytorch >= 0.8.0, <= 1.12.12",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "isort",
  "mdformat",
  "numpydoc",
  "pydata-sphinx-theme",
  "pytest",
  "pytest-cov",
  "ruff",
  "sphinx",
  "twine",
]

[project.urls]
Homepage = "https://sp-tk.sourceforge.net/"
Documentation = "https://sp-nitech.github.io/diffsptk/latest/"
Source = "https://github.com/sp-nitech/diffsptk"

[tool.hatch.build.targets.sdist]
only-include = ["diffsptk", "CITATION.cff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "diffsptk/version.py"

[tool.ruff.lint]
preview = true
extend-select = ["FURB"]
exclude = ["__init__.py"]

[tool.isort]
known_first_party = ["diffsptk"]
force_single_line = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3
sort_order = "native"
use_parentheses = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise RuntimeError",
  "raise ValueError",
  "verbose",
  "warn_type",
  "warnings",
]

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report xml -s -x"
filterwarnings = [
  "ignore:Casting complex values to real discards the imaginary part",
  "ignore:__floordiv__ is deprecated",
]
