[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffsptk"
authors = [{ name = "SPTK Working Group" }]
maintainers = [
  { name = "Takenori Yoshimura", email = "takenori@sp.nitech.ac.jp" },
]
description = "Speech signal processing modules for machine learning"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["dsp", "pytorch", "signal processing", "sptk"]
license = { text = "Apache 2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy >= 1.23.0",
  "scipy >= 1.12.0",
  "tqdm >= 4.63.0",
  "soundfile >= 0.10.2",
  "torch >= 2.3.1",
  "torchaudio >= 2.3.1",
  "torchlpc >= 0.6.0",
  "torchcomp >= 0.2.0",
  "penn >= 0.0.1, < 1.0.0",
  "pylstraight >= 0.1.0",
  "vector-quantize-pytorch >= 1.14.9",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "codespell",
  "mdformat",
  "numpydoc",
  "pkginfo",
  "pydata-sphinx-theme",
  "pytest",
  "pytest-cov",
  "ruff",
  "sphinx",
  "twine",
]

[project.urls]
Homepage = "https://sp-tk.sourceforge.net/"
Documentation = "https://sp-nitech.github.io/diffsptk/latest/"
Source = "https://github.com/sp-nitech/diffsptk"

[tool.hatch.build.targets.sdist]
only-include = ["diffsptk", "CITATION.cff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "diffsptk/version.py"

[tool.ruff.lint]
extend-select = ["E", "I"]
extend-ignore = ["E731"]   # Do not assign a `lambda` expression, use a `def`
exclude = ["__init__.py"]

[tool.codespell]
skip = "./docs/build,./tools"
ignore-words-list = "numer"
ignore-multiline-regex = "codespell:ignore-begin.*codespell:ignore-end"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "except",
  "raise",
  "verbose",
  "warn_type",
  "warnings",
  "torch.float",
  "torch.double",
]

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report xml -s -x"
filterwarnings = [
  "ignore:Casting complex values to real discards the imaginary part",
]
